Swagger ✅ + Ajout du middlewaree 'isAdmin' + qlq modif sur les controllers
