# server/controllers/employéesController.js
@@ -3,9 +3,9 @@ const Role = require("../models/role");
 const mailer = require("../middleware/mailer");
 const bcrypt = require("bcryptjs");
 const Generate_password_secure = require("secure-random-password");
-const Storage = require("local-storage")
-const ErrorResponse = require('../utils/error');
-const User_role = require('../models/user-role')
+const Storage = require("local-storage");
+const ErrorResponse = require("../utils/error");
+const User_role = require("../models/user-role");
 
 /**                  Add an employee
 
@@ -16,19 +16,22 @@ const User_role = require('../models/user-role')
  * @returns The user object.
  */
 const AddEmployee = async (req, res, next) => {
-  const {
-    body
-  } = req;
-  if (!body.lastName || !body.email || !body.firstName) {
-    return next(new ErrorResponse('Fill all filled', 401));
+  const { lastName, firstName, email } = req.body;
+  if (!lastName || !email || !firstName) {
+    return next(new ErrorResponse("Fill all filled", 401));
   } else {
     const findUser = await User.findOne({
       where: {
-        email: body.email
-      }
-    })
+        email: email,
+      },
+    });
     if (findUser) {
-      return next(new ErrorResponse('an employee with the provided email is already exist ', 401));
+      return next(
+        new ErrorResponse(
+          "an employee with the provided email is already exist ",
+          401
+        )
+      );
     } else {
       const stockPassword = Generate_password_secure.randomPassword({
         characters: [
@@ -40,25 +43,30 @@ const AddEmployee = async (req, res, next) => {
       const generatePassword = await bcrypt.hash(stockPassword, 10);
       const role = await Role.findOne({
         where: {
-          name: "employe"
-        }
+          name: "employe",
+        },
       });
       const creatUser = await User.create({
-        ...body,
+        ...req.body,
         password: generatePassword,
       });
       if (!creatUser) {
-        return next(new ErrorResponse('unexpected issue while creating user', 401));
-       }
+        return next(
+          new ErrorResponse("unexpected issue while creating user", 401)
+        );
+      }
       const role_id = role.id;
-      
-      const user_id = creatUser.id
+
+      const user_id = creatUser.id;
       const role_user = await User_role.create({
         userId: user_id,
-        roleId: role_id
-      })
-      if (!role_user) return next(new ErrorResponse('unexpected issue while creating role', 401));
-      Storage("stockPassword",stockPassword)
+        roleId: role_id,
+      });
+      if (!role_user)
+        return next(
+          new ErrorResponse("unexpected issue while creating role", 401)
+        );
+      Storage("stockPassword", stockPassword);
       mailer.main("AddEmployé", creatUser);
       await res.json(creatUser);
     }
@@ -75,38 +83,42 @@ const AddEmployee = async (req, res, next) => {
  * @returns The user object
  */
 const updateUser = async (req, res, next) => {
-  const {
-    body
-  } = req;
-  const user_id = req.params.id
+  const { lastName, firstName, email } = req.body;
+  const user_id = req.params.id;
   try {
-    if (!body.lastName || !body.email || !body.firstName) {
-      return next(new ErrorResponse('all fields required', 400));
+    if (!lastName || !email || !firstName) {
+      return next(new ErrorResponse("all fields required", 400));
     }
-    const update_User = await User.update({
-      lastName: body.lastName,
-      firstName: body.firstName,
-      email: body.email
-    }, {
-      where: {
-        id: user_id
+    const update_User = await User.update(
+      {
+        lastName: lastName,
+        firstName: firstName,
+        email: email,
+      },
+      {
+        where: {
+          id: user_id,
+        },
       }
-    })
-    if (!update_User) return next(new ErrorResponse('unexpected error during user update'))
+    );
+    if (!update_User)
+      return next(new ErrorResponse("unexpected error during user update"));
     const findUser = await User.findOne({
       where: {
-        id: user_id
-      }
-    })
+        id: user_id,
+      },
+    });
     if (!findUser) {
-      return next(new ErrorResponse(`No use found with the id:  ${user_id}`, 404));
+      return next(
+        new ErrorResponse(`No use found with the id:  ${user_id}`, 404)
+      );
     }
     mailer.main("UpdateUser", findUser);
-    res.json(findUser)
+    res.json(findUser);
   } catch (error) {
     return next(new ErrorResponse(error, 401));
   }
-}
+};
 
 /**                 SUPPRIMER UN UTULISATEUR
  * It deletes a user from the database.
@@ -120,19 +132,19 @@ const deleteUser = async (req, res, next) => {
   try {
     const delete_User = await User.destroy({
       where: {
-        id: user_id
-      }
+        id: user_id,
+      },
     });
     if (delete_User) {
       res.json({
         message: "user deleted successfully",
-        status: 200
-      })
+        status: 200,
+      });
     }
   } catch (error) {
     return next(new ErrorResponse(error, 401));
   }
-}
+};
 
 /**                 AFFICHIER LES UTULISATEUR
  * It's a function that finds all users in the database and returns them in a json format.
@@ -143,16 +155,16 @@ const deleteUser = async (req, res, next) => {
  */
 const findAllUsers = async (req, res, next) => {
   try {
-    const findUsers = await User.findAll()
-    res.json(findUsers)
+    const findUsers = await User.findAll();
+    res.json(findUsers);
   } catch (error) {
     next(new ErrorResponse(error, 401));
   }
-}
+};
 
 module.exports = {
   AddEmployee,
   updateUser,
   deleteUser,
-  findAllUsers
-}
+  findAllUsers,
+};
