# server/routes/projectRoute.js
@@ -6,37 +6,43 @@ const {
   OnlyMyProjects,
   baneProject,
 } = require("../controllers/projectController");
-const { authMiddleware } = require("../middleware/authMiddleware");
+const { authMiddleware, isAdmin } = require("../middleware/authMiddleware");
 const router = express.Router();
 
-router.post(
-  "/add",
-  authMiddleware,
-  createProject
-  // #swagger.tags = ['Project']
-);
-router.put(
-  "/update/:id",
-  authMiddleware,
-  UpdateProject
-  // #swagger.tags = ['Project']
-);
 router.get(
   "/all",
   authMiddleware,
+  isAdmin,
   findALLprojects
   // #swagger.tags = ['Project']
+  // #swagger.security = [{ "bearerAuth": [] }]
 );
 router.get(
   "/all/my",
   authMiddleware,
   OnlyMyProjects
   // #swagger.tags = ['Project']
+  // #swagger.security = [{ "bearerAuth": [] }]
+);
+router.post(
+  "/add",
+  authMiddleware,
+  createProject
+  // #swagger.tags = ['Project']
+  // #swagger.security = [{ "bearerAuth": [] }]
+);
+router.put(
+  "/update/:id",
+  authMiddleware,
+  UpdateProject
+  // #swagger.tags = ['Project']
+  // #swagger.security = [{ "bearerAuth": [] }]
 );
 router.put(
   "/bane/:id",
   authMiddleware,
   baneProject
   // #swagger.tags = ['Project']
+  // #swagger.security = [{ "bearerAuth": [] }]
 );
 module.exports = router;
