# server/routes/statutRoute.js
@@ -2,6 +2,7 @@ const express = require("express");
 const {
   addNewStatut,
   updateStatusOfTask,
+  deleteStatus,
 } = require("../controllers/statusController");
 const { authMiddleware } = require("../middleware/authMiddleware");
 const router = express.Router();
@@ -11,13 +12,21 @@ router.post(
   authMiddleware,
   addNewStatut
   // #swagger.tags = ['Status']
+  // #swagger.security = [{ "bearerAuth": [] }]
 );
-// router.delete('/delete/:idProject/:idStatut',authMiddleware,this.delete)
+router.delete(
+  "/delete/:idProject/:idStatut",
+  authMiddleware,
+  deleteStatus
+  // #swagger.tags = ['Status']
+  // #swagger.security = [{ "bearerAuth": [] }]
+);
 router.put(
   "/update/:id",
   authMiddleware,
   updateStatusOfTask
   // #swagger.tags = ['Status']
+  // #swagger.security = [{ "bearerAuth": [] }]
 );
 
 module.exports = router;
